# quickscale

./: .coveragerc  .editorconfig  .geminiignore  .gitattributes  .gitignore  .opencode.json  .pre-commit-config.yaml  .vulture.toml  AGENTS.md  AI-CODE.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL.md  COMPETITIVE_ANALYSIS.md  CONTENDING-ALTERNATIVE.md  CONTRIBUTING.md  DECISIONS.md  DIFFERENCES.md  GEMINI.md  GLOSSARY.md  MIGRATION_PLAN.md  Makefile  QUICKSCALE.md  README.md  ROADMAP.md  SCAFFOLDING.md  START_HERE.md  TECHNICAL_DOCS.md  THINKERING.md  TODO.md  USER_GUIDE.md  adaptive.rules.md  adaptive.yml  code-tree.txt  compile_docs.sh  coverage.json  crm-proposal.md  fix_summary.md  module.yml  mypy.ini  (+11 more)
quickscale/: README.md  __init__.py  adaptive.rules.md  cli.py  poetry.toml  pyproject.toml
quickscale/commands/: command_base.py  command_manager.py  command_utils.py  development_commands.py  init_command.py  project_commands.py  project_manager.py  service_commands.py  service_generator_commands.py  sync_back_command.py
quickscale/commands/verification/: service_verification.py
quickscale/config/: generator_config.py  settings.py
quickscale/project_templates/admin_dashboard/: tests_product_admin.py  views.py
quickscale/project_templates/api/: views.py
quickscale/project_templates/core/: configuration.py  context_processors.py  email_settings.py  feature_flags.py  security_settings.py  settings.py  test_settings.py  urls.py
quickscale/project_templates/credits/: models.py  views.py
quickscale/project_templates/stripe_manager/: stripe_manager.py  views.py
quickscale/project_templates/users/: forms.py  urls.py  views.py
quickscale/quickscale/templates/: docker-compose.yml
quickscale/static/js/: password-validation.js  password_validation.js
quickscale/templates/: docker-compose.yml  requirements.txt
quickscale/templates/api/: views.py
quickscale/templates/core/: email_settings.py  settings.py
quickscale/templates/djstripe/: admin.py  apps.py  models.py  urls.py  views.py  webhooks.py
quickscale/templates/docs/: service_development_guide.md
quickscale/templates/public/: views.py
quickscale/templates/users/: forms.py  models.py  views.py
quickscale/utils/: __init__.py  env_utils.py  error_manager.py  log_scanner.py  service_dev_utils.py  service_templates.py  timeout_constants.py
quickscale_cli/: README.md  adaptive.rules.md  poetry.toml  pyproject.toml
quickscale_cli/src/quickscale_cli/: __init__.py  _version.py  analytics_contract.py  auth_contract.py  backups_contract.py  beta_migration.py  crm_contract.py  main.py  module_catalog.py  notifications_contract.py  social_contract.py
quickscale_cli/tests/: conftest.py  test_analytics_contract.py  test_apply_command.py  test_apply_command_extended.py  test_beta_migration.py  test_cli.py  test_config_delta.py  test_delta.py  test_e2e_development_workflow.py  test_module_catalog.py  test_module_lifecycle_cycle.py  test_module_manifest_contract.py  test_package_init.py  test_package_init_extended.py  test_package_init_fallbacks.py  test_plan_add.py  test_plan_command.py  test_plan_reconfigure.py  test_project_detection.py  test_react_theme_e2e.py  test_schema.py  test_social_contract.py  test_social_contract_extended.py  test_state_schema.py  test_status_command.py  test_status_command_extended.py  test_version_accessibility.py
quickscale_cli/tests/commands/: test_deployment_commands.py  test_deployment_commands_extended.py  test_development_commands.py  test_development_commands_extended.py  test_dr_commands.py  test_embed_command.py  test_init_themes.py  test_module_commands.py  test_module_config.py  test_module_config_extended.py  test_remove_command.py  test_remove_command_extended.py
quickscale_cli/tests/utils/: test_dependency_utils.py  test_dependency_utils_extended.py  test_docker_utils.py  test_project_manager.py  test_railway_utils.py
quickscale_core/: .coveragerc  README.md  adaptive.rules.md  poetry.toml  pyproject.toml
quickscale_core/src/quickscale_core/: __init__.py  _version.py  context_processors.py  module_wiring.py  settings_manager.py  version.py
quickscale_core/tests/: conftest.py  docker-compose.test.yml  test_agentic_flow_adapters.py  test_context_processors.py  test_e2e_full_workflow.py  test_error_pages.py  test_file_utils.py  test_generator_coverage.py  test_git_utils.py  test_html_theme_integration.py  test_integration.py  test_loader_coverage.py  test_manifest_loader.py  test_manifest_schema.py  test_module_config.py  test_module_wiring.py  test_react_theme_integration.py  test_schema_coverage.py  test_settings_manager.py  test_settings_manager_coverage.py  test_version.py  test_version_fallback.py
quickscale_core/tests/generator/: __init__.py  test_themes.py
quickscale_core/tests/test_generator/: __init__.py  test_generator.py  test_production_settings_database_url.py  test_templates.py  validate_templates.py
quickscale_modules/analytics/: README.md  module.yml  pyproject.toml
quickscale_modules/analytics/tests/: test_apps.py  test_events.py  test_services.py  test_templatetags.py
quickscale_modules/auth/: README.md  module.yml  poetry.toml  pyproject.toml
quickscale_modules/auth/tests/: conftest.py  settings.py  test_forms.py  test_models.py  test_signals.py  test_templates.py  test_views.py  urls.py
quickscale_modules/blog/: README.md  module.yml  pyproject.toml
quickscale_modules/blog/tests/: settings.py  test_admin.py  test_api.py  test_feeds.py  test_models.py  test_urls.py  test_views.py  urls.py
quickscale_modules/forms/: README.md  module.yml  pyproject.toml
quickscale_modules/forms/tests/: settings.py  test_management.py  test_models.py  test_notifications.py  test_serializers.py  test_throttles.py  test_views.py
quickscale_modules/listings/: README.md  module.yml  pyproject.toml
quickscale_modules/listings/tests/: __init__.py  (+8 more)
quickscale_modules/notifications/: README.md  module.yml  pyproject.toml
quickscale_modules/social/: README.md  pyproject.toml
quickscale_modules/storage/: README.md  module.yml  pyproject.toml
(+1121 files in other folders)
