[tool.poetry]
name = "quickscale-monorepo"
version = "0.0.0"
description = "Repository-level helper project for local development with centralized dependencies"
authors = ["Experto AI <victor@experto.ai>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
quickscale = {path = "./quickscale", develop = true}
quickscale-core = {path = "./quickscale_core", develop = true}
quickscale-cli = {path = "./quickscale_cli", develop = true}
# All modules installed in editable mode for centralized testing
quickscale-module-auth = {path = "./quickscale_modules/auth", develop = true}
quickscale-module-blog = {path = "./quickscale_modules/blog", develop = true}
quickscale-module-listings = {path = "./quickscale_modules/listings", develop = true}
quickscale-module-crm = {path = "./quickscale_modules/crm", develop = true}

[tool.poetry.group.dev.dependencies]
# Testing frameworks
pytest = "^9.0.2"
pytest-cov = "^7.0.0"  # Updated for better coverage compatibility
coverage = "^7.13.3"  # Pin to avoid templite syntax errors with newer versions
pytest-docker = "^3.2.5"
pytest-playwright = "^0.7.2"
pytest-django = "^4.11.1"
# Code quality tools
ruff = "^0.15.0"
mypy = "^1.19.1"
# Advanced code quality analysis tools
vulture = "^2.14"        # Dead code detection
radon = "^6.0.1"         # Complexity metrics
pylint = "^4.0.4"        # Code duplication detection
# Type stubs
types-pyyaml = "^6.0.12.20241230"
django-stubs = "^5.2.9"
# Testing utilities
factory-boy = "^3.3.3"
psycopg2-binary = "^2.9.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
# Use multiple processes for faster analysis
jobs = 0  # Auto-detect CPU count

# Python version target
py-version = "3.12"

# Paths to analyze
recursive = true
ignore = ["tests", "migrations", "htmlcov", ".venv", "__pycache__"]

[tool.pylint.messages_control]
# Disable most checks - we only want duplication detection
# Ruff and MyPy handle linting and type checking
disable = [
    "all",  # Disable everything first
]
enable = [
    "duplicate-code",  # R0801 - Only enable duplication detection
]

[tool.pylint.similarities]
# Minimum lines of similar code to trigger duplication warning
min-similarity-lines = 6

# Ignore comments when comparing code
ignore-comments = true

# Ignore docstrings when comparing code
ignore-docstrings = true

# Ignore imports when comparing code
ignore-imports = true

# Ignore function/method signatures
ignore-signatures = true
