[tool.poetry]
name = "quickscale-module-storage"
version = "0.76.0"
description = "QuickScale storage infrastructure module with local/S3-compatible helpers"
authors = ["Experto-AI <contact@experto.ai>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "quickscale_modules_storage", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
Django = "^6.0"
django-storages = "^1.14.4"
boto3 = "^1.35.0"
Pillow = "^12.1.0"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py314"

[[tool.mypy.overrides]]
module = "storages.*"
ignore_missing_imports = true

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "src"]
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "-v --cov=quickscale_modules_storage --cov-report=html --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.report]
fail_under = 90
