[tool.poetry]
name = "quickscale"
version = "0.74.2"
description = "Meta-package that installs quickscale-core and quickscale-cli together"
authors = ["Experto AI <victor@experto.ai>"]
license = "Apache-2.0"
homepage = "https://github.com/Experto-AI/quickscale"
repository = "https://github.com/Experto-AI/quickscale"
documentation = "https://github.com/Experto-AI/quickscale/tree/main/docs"
keywords = ["django", "cli", "scaffolding", "project-generator"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.12"
quickscale-core = "^0.74.2"
quickscale-cli = "^0.74.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
