[project]
name = "quickscale"
version = "0.80.0"
description = "Meta-package that installs quickscale-core and quickscale-cli together"
requires-python = ">=3.14,<4.0"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "Experto AI", email = "victor@experto.ai"}]
keywords = ["django", "cli", "scaffolding", "project-generator"]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/Experto-AI/quickscale"
Repository = "https://github.com/Experto-AI/quickscale"
Documentation = "https://github.com/Experto-AI/quickscale/tree/main/docs"

[tool.poetry]

[tool.poetry.dependencies]
python = "^3.14"
quickscale-core = "^0.80.0"
quickscale-cli = "^0.80.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
