[project]
name = "quickscale-cli"
version = "0.83.0"
description = "Command-line interface for QuickScale Django project generator"
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "Experto AI", email = "victor@experto.ai"}]
keywords = ["django", "cli", "project-generator", "saas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/Experto-AI/quickscale"
Repository = "https://github.com/Experto-AI/quickscale"
Documentation = "https://github.com/Experto-AI/quickscale/tree/main/docs"

[project.scripts]
quickscale = "quickscale_cli.main:cli"

[tool.poetry]
packages = [{include = "quickscale_cli", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
click = "^8.3.1"
quickscale-core = {path = "../quickscale_core"}

[tool.poetry.group.dev.dependencies]
# Dev dependencies centralized in root pyproject.toml
# Use: poetry install from repository root

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-m", "not e2e",  # Skip E2E tests by default (run with: pytest -m e2e)
]
markers = [
    "integration: integration tests (slower, require external dependencies)",
    "slow: slow tests that take significant time to run",
    "e2e: end-to-end tests",
]

[tool.coverage.report]
fail_under = 90
# Per-file minimum target: 80% (enforced via code review)

# Ruff and mypy configurations centralized in root ruff.toml and mypy.ini
# Package-specific isort override
[tool.ruff.lint.isort]
known-first-party = ["quickscale_cli", "quickscale_core"]

# Package-specific mypy overrides
[[tool.mypy.overrides]]
module = "quickscale_core.*"
ignore_missing_imports = true
