[project]
name = "quickscale-module-listings"
version = "0.73.0"
description = "QuickScale listings module with AbstractListing model for marketplace verticals"
requires-python = ">=3.14,<4.0"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "Experto AI", email = "victor@experto.ai"}]
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "quickscale_modules_listings", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
Django = ">=6.0.3,<7.0.0"
django-filter = "^25.2"
django-markdownx = "^4.0.9"
Pillow = ">=12.1.1,<13.0.0"

[tool.poetry.group.dev.dependencies]
# Minimal dev dependencies for standalone testing
# pytest, pytest-cov, ruff, mypy centralized in root pyproject.toml (monorepo)
# or provided by user's project (standalone embed)
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff and mypy configurations centralized in root ruff.toml and mypy.ini
# Package-specific overrides:

[tool.ruff]
target-version = "py314"  # This package requires Python 3.14+

[[tool.mypy.overrides]]
module = "django_filters.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "markdownx.*"
ignore_missing_imports = true

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "-v --cov=quickscale_modules_listings --cov-report=html --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.report]
fail_under = 90
# Per-file minimum target: 80% (enforced via code review)
