[project]
name = "quickscale-module-notifications"
version = "0.78.0"
description = "QuickScale transactional notifications module with Resend-first Anymail delivery"
requires-python = ">=3.14,<4.0"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "Experto AI", email = "victor@experto.ai"}]
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "quickscale_modules_notifications", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
Django = ">=6.0.3,<7.0.0"
django-anymail = ">=13.0,<14.0"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py314"

[[tool.mypy.overrides]]
module = "anymail.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "src"]
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "-v --cov=quickscale_modules_notifications --cov-report=html --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.report]
fail_under = 90

[tool.django-stubs]
django_settings_module = "tests.settings"
