[project]
name = "quickscale-module-social"
version = "0.79.0"
description = "QuickScale curated social links and embeds module"
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "Experto AI", email = "victor@experto.ai"}]
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "quickscale_modules_social", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
Django = ">=6.0.3,<7.0.0"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py314"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "src"]
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "-v --cov=quickscale_modules_social --cov-report=html --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.report]
fail_under = 90

[tool.django-stubs]
django_settings_module = "tests.settings"
