[project]
name = "quickscale-module-storage"
version = "0.76.0"
description = "QuickScale storage infrastructure module with local/S3-compatible helpers"
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "Experto AI", email = "victor@experto.ai"}]
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "quickscale_modules_storage", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
Django = ">=6.0.3,<7.0.0"
django-storages = {version = "^1.14.4", optional = true}
boto3 = {version = "^1.35.0", optional = true}
Pillow = ">=12.1.1,<13.0.0"

[tool.poetry.extras]
cloud = ["django-storages", "boto3"]

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py314"

[[tool.mypy.overrides]]
module = "storages.*"
ignore_missing_imports = true

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "src"]
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "-v --cov=quickscale_modules_storage --cov-report=html --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.report]
fail_under = 90
